Added a model module.